--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -3,13 +3,13 @@
 # A full description of the configuration file is at
 # /usr/share/doc/mosquitto/examples/mosquitto.conf.example
 
-pid_file /var/run/mosquitto.pid
+# pid_file /var/run/mosquitto.pid ← Comment out
 
 persistence true
 persistence_location /var/lib/mosquitto/
 
-log_dest file /var/log/mosquitto/mosquitto.log
+log_dest stdout
 
 include_dir /etc/mosquitto/conf.d
 listener 1883
-password_file /etc/mosquitto/passwd
+password_file /mosquitto/config/passwd
