--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -12,4 +12,6 @@ log_dest stdout
 
 include_dir /etc/mosquitto/conf.d
 listener 1883
+allow_anonymous true
 password_file /mosquitto/config/passwd
+
