--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -10,8 +10,7 @@ persistence_location /var/lib/mosquitto/
 
 log_dest stdout
 
-include_dir /etc/mosquitto/conf.d
+include_dir /mosquitto/conf.d
 listener 1883
 allow_anonymous true
-password_file /mosquitto/config/passwd
-
+password_file /mosquitto/passwd
