fixed error of persistent data loop

--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -8,4 +8,5 @@ listener 1883
 allow_anonymous false
 
 # Include bridge configuration
-include_dir /mosquitto/config
+include_dir /mosquitto/config/bridge
+
