--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -9,4 +9,4 @@ allow_anonymous false
 
 # Include bridge configuration
 include_dir /mosquitto/config/bridge
-
+password_file /mosquitto/config/passwd
